# looper

./: .coveragerc  .gitignore  .travis.yml  README.md  ci.sh  mypy.ini  pyproject.toml  release.sh  setup.cfg  setup.py
.github/workflows/: checks.yml
looper/: __init__.py  looper.py  main.py
looper/test/: test_looper.py
looper/tests/: test_looper.py  test_main.py
py_loop/: __init__.py  looper.py  main.py
tests/: test_looper.py  test_main.py
