[tool.poetry]
name = "py-loop"
version = "0.5.1"
description = "Run commands until it fails"
authors = ["jerem <jeremy.tellaa@tanker.io>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
cli-ui = "^0.17.2"

[tool.poetry.group.dev.dependencies]
twine = "^5.0.0"
black = "24.4.2"
codecov = "^2.1.13"
flake8 = "7.1.0"
mypy = "1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
looper = 'py_loop.main:cli_main'
