[tool.poetry]
name = "py-loop"
version = "0.5.1"
description = "Run commands until it fails"
authors = ["jerem <jeremy.tellaa@tanker.io>"]

[tool.poetry.dependencies]
python = ">=3.9.20,<4.0"
cli-ui = "^0.19.0"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"
black = "25.1.0"
codecov = "^2.1.13"
flake8 = "7.2.0"
mypy = "1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
looper = 'py_loop.main:cli_main'
